@@ -1,5 +1,9 @@
 2007-11-08  Jb Evain  <jbevain@novell.com>
 
+	* EnumerableTest.cs: add simple test for Union.
+
+2007-11-08  Jb Evain  <jbevain@novell.com>
+
 	* EnumerableTest.cs: add simple test for intersect.
 
 2007-11-06  Jb Evain  <jbevain@novell.com>
